--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,7 +354,9 @@ iframe {
 /* ========================================================== */
 
 #logo img {
-    width: 120px;
+    width: 30px;
+    height: 30px;
+    margin-right: 1rem;
     float: left;
     margin-left: 70px;
 }
